--- a/apps/www/content/docs/components/status-honeycomb.mdx
+++ b/apps/www/content/docs/components/status-honeycomb.mdx
@@ -51,7 +51,7 @@ StatusHoneycomb solves this with:
 <TabsContent value="cli">
 
 ```bash
-npx shadcn@latest add https://engine-ui.vercel.app/r/status-honeycomb.json
+npx shadcn@latest add https://ungine.vercel.app/r/status-honeycomb.json
 ```
 
 </TabsContent>
@@ -249,7 +249,7 @@ Tips for large datasets:
 
 ## Design Philosophy
 
-StatusHoneycomb embodies Engine UI's **Information-First** approach:
+StatusHoneycomb embodies Ungine UI's **Information-First** approach:
 
 1. **Perfect Tessellation**: True hexagonal honeycomb with zero gaps between cells
 2. **Density over Spaciousness**: 120+ cells in minimal space vs 10 cards in 800px
