--- a/apps/www/content/docs/index.mdx
+++ b/apps/www/content/docs/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: Introduction
-description: Welcome to Engine UI
+description: Welcome to Ungine UI
 ---
 
 # Introduction
 
-Welcome to Engine UI - a modern UI component library built with React, TypeScript, and Tailwind CSS.
+Welcome to Ungine UI - a modern UI component library built with React, TypeScript, and Tailwind CSS.
 
 ## Getting Started
 
